JwtUtil dodane